Added intersection observer in order to create an infinite scroll

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <div id="root"></div>
+  <div id="intersector"></div>
   <script type="module" src="./src/index.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
